--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
-name: nozzle
+name: dardi
 description: Simple DI library for flutter and pure dart projects.
 version: 0.1.0
 author: Kirill Molokov <baihu92@gmail.com>
 homepage: https://github.com/baihu92
-repository: https://github.com/baihu92/Either
+repository: https://github.com/baihu92/Dardi
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
